--- a/app/src/main/res/layout/appbar_abml.xml
+++ b/app/src/main/res/layout/appbar_abml.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="415dp"
     android:gravity="center"
@@ -26,46 +26,46 @@
     </LinearLayout>
 
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/productNameEditText"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:hint="@string/nombre_del_producto"
             android:maxLines="1"
             android:inputType="text"/>
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center">
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/countEditText"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:hint="@string/cantidad_comprada"
             android:inputType="number"
             />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center">
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/priceEditText"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:hint="@string/precio"
             android:inputType="numberDecimal"
             />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
     <LinearLayout
@@ -121,4 +121,4 @@
         android:layout_marginBottom="5dp"
         android:background="@drawable/button_with_corners"
         />
-</android.support.design.widget.AppBarLayout>
+</com.google.android.material.appbar.AppBarLayout>
