--- a/app/src/main/res/layout/itemrecyclerview.xml
+++ b/app/src/main/res/layout/itemrecyclerview.xml
@@ -1,4 +1,4 @@
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     android:layout_height="110dp"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -109,4 +109,4 @@
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
