--- a/app/src/main/res/layout/listsrecyclerview.xml
+++ b/app/src/main/res/layout/listsrecyclerview.xml
@@ -1,4 +1,4 @@
-<android.support.v7.widget.CardView android:layout_height="95dp"
+<androidx.cardview.widget.CardView android:layout_height="95dp"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -48,4 +48,4 @@
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
