Agrego lugar para poner nombre a la lista en la view Agrego campo nombreLista a la tabla de listas

--- a/app/src/main/res/layout/activity_abml.xml
+++ b/app/src/main/res/layout/activity_abml.xml
@@ -20,7 +20,8 @@
             android:gravity="center"
             android:padding="5dp">
 
-            <include layout="@layout/appbar_abml"/>
+            <include layout="@layout/appbar_abml"
+                android:id="@+id/menu"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerList"
