--- a/app/src/main/res/layout/listsrecyclerview.xml
+++ b/app/src/main/res/layout/listsrecyclerview.xml
@@ -1,4 +1,4 @@
-<androidx.cardview.widget.CardView android:layout_height="95dp"
+<androidx.cardview.widget.CardView android:layout_height="120dp"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,43 +9,56 @@
     android:layout_marginLeft="10dp"
     android:layout_marginBottom="10dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
-        android:orientation="horizontal"
         >
+
+        <TextView
+            android:id="@+id/nombreTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/annie_use_your_telescope"
+            android:text="Sin Nombre"
+            android:textSize="25sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/fechaTextView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/annie_use_your_telescope"
-            android:gravity="center"
+            android:layout_height="wrap_content"
             android:text="fecha"
-            android:textSize="25sp"
-            />
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/annie_use_your_telescope"
-            android:gravity="center"
+            android:layout_height="wrap_content"
             android:text="@string/totalGastadoTitulo"
-            android:textSize="25sp"
-            android:layout_marginLeft="10dp"/>
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/fechaTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nombreTextView" />
+
         <TextView
             android:id="@+id/numeroTextView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/annie_use_your_telescope"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="numero"
-            android:textSize="25sp"
-            android:gravity="center"
-            />
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/fechaTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.06"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/nombreTextView"
+            app:layout_constraintVertical_bias="0.45" />
 
 
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
