--- a/app/src/main/res/layout/activity_abml.xml
+++ b/app/src/main/res/layout/activity_abml.xml
@@ -14,6 +14,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
+            android:id="@+id/linearLayoutContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
