--- a/app/src/main/res/layout/lists_recycler_view.xml
+++ b/app/src/main/res/layout/lists_recycler_view.xml
@@ -21,7 +21,10 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/annie_use_your_telescope"
             android:text="Sin Nombre"
+            android:ellipsize="end"
             android:textSize="25sp"
+            android:maxLines="1"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,6 +34,7 @@
             android:layout_height="wrap_content"
             android:text="fecha"
             android:textSize="20sp"
+            android:typeface="serif"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -38,25 +42,29 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/annie_use_your_telescope"
             android:text="@string/totalGastadoTitulo"
             android:textSize="20sp"
+
             app:layout_constraintBottom_toTopOf="@+id/fechaTextView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.593"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nombreTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/nombreTextView"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/numeroTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="numero"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/fechaTextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.06"
+            android:layout_marginStart="8dp"
+            android:text="123"
+            android:textSize="23sp"
+            android:typeface="serif"
+            app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintStart_toEndOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/nombreTextView"
-            app:layout_constraintVertical_bias="0.45" />
+            app:layout_constraintTop_toTopOf="@+id/textView"
+            app:layout_constraintVertical_bias="1.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
