--- a/app/src/main/res/layout/modal_new_list_name.xml
+++ b/app/src/main/res/layout/modal_new_list_name.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="300dp"
-    android:layout_height="120dp"
+    android:layout_width="400dp"
+    android:layout_height="170dp"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="12dp"
         android:text="@string/nuevo_nombre_para_la_lista"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -18,13 +19,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:inputType="textPersonName"
-        android:padding="10dp" />
+        android:padding="12dp" />
 
     <Button
         android:id="@+id/buttonOk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="15dp"
         android:text="@string/ok" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
